# Online-voting-demo

./: .gitignore
client/: README.md  client.py  client_config.json  debug_server.py  mock_intermediary.py  parties.json  run_debug.sh
login_portal/: Cargo.toml  README.md
login_portal/src/: main.rs
report/: Makefile  README.md  bibliography.bib  report.tex
voting_server/: Cargo.toml  README.md  key.asc  public_key.asc
voting_server/src/: main.rs
