[package]
name = "login_portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.198", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["add-extension"] }
tower = "0.4.13"
