[package]
name = "voting_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
sequoia-openpgp = "1.20.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.202", features = ["derive"] }
